--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 node_modules/
+# git remote add origin https://github.com/luisorlandogomezjimenez/spa-single-page-javascript.git
+#git push -u origin main
