--- a/package.json
+++ b/package.json
@@ -4,9 +4,30 @@
     "webpack": "^5.30.0"
   },
   "devDependencies": {
+    "bootstrap": "^4.6.0",
     "css-loader": "^5.2.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
-  }
+  },
+  "name": "javascript-spa-single",
+  "version": "1.0.0",
+  "main": "src/main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/luisorlandogomezjimenez/spa-single-page-javascript.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/luisorlandogomezjimenez/spa-single-page-javascript/issues"
+  },
+  "homepage": "https://github.com/luisorlandogomezjimenez/spa-single-page-javascript#readme",
+  "description": ""
 }
