--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "dependencies": {
-    "html-webpack-plugin": "^5.3.1",
-    "webpack": "^5.30.0"
-  },
   "devDependencies": {
     "bootstrap": "^4.6.0",
     "css-loader": "^5.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "webpack": "^5.31.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
